Wyrzucenie kłopotliwych odwołań do testowych webserwisów, update do obecnej wersji. Teraz już powinno działać!

--- a/DSClient/src/main/webapp/index.xhtml
+++ b/DSClient/src/main/webapp/index.xhtml
@@ -12,7 +12,7 @@
             <ui:define name="content">
                 strona tytułowa projektu
                 zxcvzxcvzxcvzxcvzxcvzxcv
-                <h:outputText value="#{simulation.sayHello()}"> </h:outputText>
+                <h:outputText value=""> </h:outputText>
             </ui:define>
 
         </ui:composition>
