--- a/DSClient/src/main/webapp/vizualization.xhtml
+++ b/DSClient/src/main/webapp/vizualization.xhtml
@@ -3,9 +3,12 @@
 <ui:composition xmlns:ui="http://java.sun.com/jsf/facelets"
                 template="./layout.xhtml">
 
+    <ui:define name="top">
+        wizualizacja wyników
+    </ui:define>
 
     <ui:define name="content">
-        lista parametrów dla danej symulacji w ładnym formularzu
+        miejsce na kontrolkę wizualizacji
     </ui:define>
 
 </ui:composition>
