--- a/DSClient/src/main/webapp/layout.xhtml
+++ b/DSClient/src/main/webapp/layout.xhtml
@@ -2,7 +2,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:h="http://java.sun.com/jsf/html">
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:pou="http://primefaces.org/ui">
 
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -16,11 +18,17 @@
 
         <div id="top" class="top">
             Projekt na programowanie zespołowe
-            <ui:insert name="top">Top</ui:insert>
+            <ui:insert name="top"></ui:insert>
         </div>
         <div>
-            <div id="left">
-                lista symulacji:
+            <div id="menu">
+                <h:form>
+                    <h:outputText value="lista symulacji do wykonania"></h:outputText><br/>
+                <ui:repeat value="#{simulation.simulationList}" id="simlist" var="simulationType" >
+                    <h:commandLink actionListener="#{simulation.simulationParameters(simulationType.name)}" value="faces/simulationParameters.xhtml" >#{simulationType.name}</h:commandLink> 
+                </ui:repeat>
+                <h:outputLink value="faces/resultList.xhtml">Lista wykonanych symulacji</h:outputLink>
+                </h:form>
             </div>
             <div id="content" class="left_content">
                 <ui:insert name="content">Content</ui:insert>
