dodanie odwołań do webserwisu (nie będzie działać bo trzeba zmienić wsdl'a), wsadzenie kontrolki wizualizacji (też pewnie nie będzie działać) i masa innych poprawek.

--- a/DSClient/src/main/webapp/resultList.xhtml
+++ b/DSClient/src/main/webapp/resultList.xhtml
@@ -15,7 +15,7 @@
                 <h:outputText value="#{parameter.name}"></h:outputText>
                 <h:outputText value="#{parameter.type}"></h:outputText>
             </ui:repeat>
-            <h:outputLink value="faces/visualization.xhtml?#{executedSimulation.url}" >zwizualizuj</h:outputLink>
+            <h:outputLink value="faces/visualization.xhtml?url=#{executedSimulation.url}" >zwizualizuj</h:outputLink>
         </ui:repeat>
     </ui:define>
 
