--- a/DSClient/src/main/webapp/layout.xhtml
+++ b/DSClient/src/main/webapp/layout.xhtml
@@ -7,10 +7,14 @@
       xmlns:pou="http://primefaces.org/ui">
 
     <h:head>
+        
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <link href="./resources/css/default.css" rel="stylesheet" type="text/css" />
         <link href="./resources/css/cssLayout.css" rel="stylesheet" type="text/css" />
-        <title>Facelets Template</title>
+        <ui:insert name="head">
+        <script type="text/javascript" src="./../resources/scirpts/visualization.js"/>
+        <title>Dzikie Spawarki</title>
+        </ui:insert>
     </h:head>
 
     <h:body>
