poprawki wszystkiego. Komunikacjia działa jak się uruchomi lokalnie. Żeby działało na serverze trzeba podmienić 1 linijkę w Simulation.java na lokalizacje wsdl'a na serverze. Generalnie śmiga jak ta lala (trochę brzydka ale mam nadzieje że Mirek ją plastycznie zoperuje). Chwała Wielkiemu Latającemu Potworowi Spagetti!!!!

--- a/DSClient/src/main/webapp/resultList.xhtml
+++ b/DSClient/src/main/webapp/resultList.xhtml
@@ -12,10 +12,10 @@
         <ui:repeat value="#{simulation.resultList}" var="executedSimulation" id="simexecuted">
             <h:outputText value="#{executedSimulation.name}"></h:outputText>
             <ui:repeat value="#{executedSimulation.parameters}" var="parameter" id="simparam">
-                <h:outputText value="#{parameter.name}"></h:outputText>
-                <h:outputText value="#{parameter.type}"></h:outputText>
+                <h:outputText value="#{parameter.name}"></h:outputText><br/>
+                <h:outputText value="#{parameter.value}"></h:outputText><br/>
             </ui:repeat>
-            <h:outputLink value="faces/visualization.xhtml?url=#{executedSimulation.url}" >zwizualizuj</h:outputLink>
+            <h:outputLink value="vizualization.xhtml?url=#{executedSimulation.url}" >zwizualizuj</h:outputLink>
         </ui:repeat>
     </ui:define>
 
