--- a/DSClient/src/main/webapp/vizualization.xhtml
+++ b/DSClient/src/main/webapp/vizualization.xhtml
@@ -11,7 +11,7 @@
      </ui:insert>
     
     <ui:define name="top">
-        wizualizacja wyników
+        Wizualizacja wyników
     </ui:define>
 
     <ui:define name="content">
