--- a/DSClient/src/main/webapp/simulationParameters.xhtml
+++ b/DSClient/src/main/webapp/simulationParameters.xhtml
@@ -8,18 +8,24 @@
 
     <ui:define name="top">
         Parametry symulacji
-        <h:outputText value="#{simulation.simulationToExecute.name}"></h:outputText>
+        <h:outputText value="#{simulation.simulationToExecute.name}"></h:outputText>&trade;
     </ui:define>
 
     <ui:define name="content">
-        <h:form id="parametersListForm">
-            <ui:repeat value="#{simulation.simulationToExecute.parameters}" var="parameter" id="simparam">
-                <h:outputText value="#{parameter.name}"></h:outputText>
-                <h:inputText value="#{parameter.type}" required="true" requiredMessage="pole jest wymagane" validatorMessage="podana przez ciebie wartość musi być liczbą"><f:validateDoubleRange ></f:validateDoubleRange>  </h:inputText> <br/>
-            </ui:repeat>
-            <h:commandButton type="submit" action="#{simulation.executeSimulation()}" value="wykonaj symulację"  ></h:commandButton> 
-        </h:form>
         
+        <p>Pamiętaj do dokładnym wypełnieniu formularza. Wyraźnymi, drukowanymi literami. Prosimy nie wychodzić długopisem poza kratki.</p>
+        <h:form id="parametersListForm">
+            <fieldset>
+            <ui:repeat value="#{simulation.simulationToExecute.parameters}" var="parameter" id="simparam">
+                <div class="field"><label><h:outputText value="#{parameter.name}"></h:outputText></label>
+                <h:inputText value="#{parameter.type}" required="true" requiredMessage="pole jest wymagane" validatorMessage="podana przez ciebie wartość musi być liczbą"><f:validateDoubleRange ></f:validateDoubleRange>  </h:inputText> </div>
+            </ui:repeat>
+            
+            <br /><br />
+            <div><h:commandButton type="submit" action="#{simulation.executeSimulation()}" value="Symuluj!"  ></h:commandButton> 
+                </div></fieldset>
+        </h:form>
+
     </ui:define>
 
 </ui:composition>
