dodanie powrotu do strony głównej, zmiana wielkości kontrolki silverlighta (łukasz specjalnie dla ciebie) ale i tak nie działa

--- a/DSClient/src/main/webapp/layout.xhtml
+++ b/DSClient/src/main/webapp/layout.xhtml
@@ -34,7 +34,7 @@
                         </div>
                         <div class="row-2">
                             <div class="indent">
-                                <img alt="" src="./resources/css/images/logo.jpg" />
+                                <h:form> <h:commandButton image="./resources/css/images/logo.jpg" alt="" action="index" /> </h:form>
 <!--                                <h1>Projekt na programowanie zespołowe</h1>-->
                             </div>
                         </div>
