Prawie nic, sprawdzam skrypt serwerowy czy wpuszcza najnowsze zmiany

--- a/DSClient/src/main/webapp/index.xhtml
+++ b/DSClient/src/main/webapp/index.xhtml
@@ -19,7 +19,7 @@
                     Wydziale Fizyki i Informatyki Stosowanej AGH</a>.</p>
             <p>Najserdecznie zapraszamy do skorzystania z menu powyżej celem posymulowania i powizualizowania</p>
             <p>
-                Zapewniamy masę wrażeń!</p>
+                Zapewniamy masę wrażeń!!</p>
 
             <h:outputText value=""> </h:outputText>
         </ui:define>
