--- a/DSClient/src/main/webapp/vizualization.xhtml
+++ b/DSClient/src/main/webapp/vizualization.xhtml
@@ -18,7 +18,7 @@
         <form id="form1" runat="server" style="height:100%">
     <div id="silverlightControlHost">
         <object data="data:application/x-silverlight-2," type="application/x-silverlight-2" width="100%" height="100%">
-		  <param name="source" value="ClientBin/Wiz.xap"/>
+		  <param name="source" value="./resources/Wiz.xap"/>
 		  <param name="onError" value="onSilverlightError" />
 		  <param name="background" value="white" />
 		  <param name="minRuntimeVersion" value="5.0.61118.0" />
