--- a/DSClient/src/main/webapp/vizualization.xhtml
+++ b/DSClient/src/main/webapp/vizualization.xhtml
@@ -15,7 +15,7 @@
     </ui:define>
 
     <ui:define name="content">
-        <form id="form1" runat="server" style="height:100%">
+        <form id="form1" runat="server" style="height:100%; background-color: rgba(0, 0, 0, 0.0);">
     <div id="silverlightControlHost">
         <object data="data:application/x-silverlight-2," type="application/x-silverlight-2" width="100%" height="100%">
 		  <param name="source" value="./resources/Wiz.xap"/>
