--- a/DSClient/src/main/webapp/vizualization.xhtml
+++ b/DSClient/src/main/webapp/vizualization.xhtml
@@ -20,7 +20,7 @@
         <object data="data:application/x-silverlight-2," type="application/x-silverlight-2" width="100%" height="100%">
 		  <param name="source" value="./resources/Wiz.xap"/>
 		  <param name="onError" value="onSilverlightError" />
-		  <param name="background" value="transparent" />
+		  <param name="background" value="white" />
 		  <param name="minRuntimeVersion" value="5.0.61118.0" />
 		  <param name="autoUpgrade" value="true" />
 		  <a href="http://go.microsoft.com/fwlink/?LinkID=149156" style="text-decoration:none">
