Test ścieżki do temp

--- a/DSClient/src/main/webapp/index.xhtml
+++ b/DSClient/src/main/webapp/index.xhtml
@@ -21,7 +21,7 @@
             <p>
                 Zapewniamy masę wrażeń!!</p>
 
-            <h:outputText value=""> </h:outputText>
+            <h:outputText value="#{simulation.shit()}"> </h:outputText>
         </ui:define>
 
     </ui:composition>
